change source files locations

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
     <build>
         <finalName>zendesk_fetcher</finalName>
-        <sourceDirectory>src</sourceDirectory>
+        <sourceDirectory>src/main/java</sourceDirectory>
 
         <plugins>
 
